# objctypes

./: .clang-format  .clangd  .editorconfig  .gitignore  .lefthook.yml  .readthedocs.yaml  AGENTS.md  GEMINI.md  README.md  compile_commands_gen.py  pyproject.toml  renovate.json  setup.py
.gemini/: config.yaml  styleguide.md
.github/workflows/: build.yml  check-editorconfig.yml  check.yml  docs-preview.yml
csrc/: objcbool.c  objcbool.h  objcclass.c  objcclass.h  objcmetaclass.c  objcmetaclass.h  objcmethod.c  objcmethod.h  objcobject.c  objcobject.h  objcselector.c  objcselector.h  objctypes.c  objctypes.h  objctypes.m  objctypes_cache.cc  objctypes_cache.cpp  objctypes_cache.h  objctypes_module.h
docs/: conf.py  index.rst  tutorial.rst
docs/autoapi/: index.rst
docs/autoapi/objctypes/: index.rst
docs/reference/: classes.rst  index.rst
src/objctypes/: __init__.pyi
tests/: test_c_api.py  test_concurrent.py  test_objcbool.py  test_objcclass.py  test_objcmetaclass.py  test_objcmethod.py  test_objcobject.py  test_objcselector.py
