[build-system]
requires = ["setuptools==75.8.2", "setuptools_scm==8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "objctypes"
description = "Use Objective-C features in Python"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }
keywords = ["objctypes", "objc", "Objective-C", "ObjectiveC"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: MacOS X :: Cocoa",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: iOS",
  "Programming Language :: Objective C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
urls.Repository = "https://github.com/qqfunc/objctypes"
urls.Issues = "https://github.com/qqfunc/objctypes/issues"
dynamic = ["version"]

[dependency-groups]
check = [
  "mypy==1.15.0",
  "pytest==8.3.5",
  "pytest-xdist==3.6.1",
  "types-setuptools==75.8.2.20250305",
]
docs = [
  "furo==2024.8.6",
  "packaging==24.2",
  "sphinx==8.2.3",
  "sphinx-autoapi==3.6.0",
  "sphinx-copybutton==0.5.2",
  "sphinx-notfound-page==1.1.0",
]
dev = [
  { include-group = "check" },
  { include-group = "docs" },
  "editorconfig-checker==3.2.0",
  "ruff==0.9.9",
  "sphinx-autobuild==2024.10.3",
  "typos==1.30.1",
]
gh-actions = [
  { include-group = "check" },
  "pytest-github-actions-annotate-failures==0.3.0",
]

[tool.mypy]
exclude = ["^build/"]

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.ruff]
line-length = 79
format.docstring-code-line-length = 72
lint.select = ["ALL"]
lint.ignore = [
  "PYI021", # docstring-in-stub
  "D203",   # one-blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "D418",   # overload-with-docstring
]
lint.per-file-ignores."setup.py" = [
  "S603", # subprocess-without-shell-equals-true
]
lint.per-file-ignores."docs/conf.py" = [
  "INP001", # implicit-namespace-package
]
lint.per-file-ignores."tests/**.py" = [
  "S101",    # assert
  "INP001",  # implicit-namespace-package
  "PLR2004", # magic-value-comparison
]
lint.pycodestyle.max-doc-length = 72

[tool.setuptools_scm]

[tool.typos]
files.extend-exclude = ["renovate.json", "uv.lock"]
default.unicode = false
